[project]
name = "smart-cli"
version = "0.1.0"
description = "A smart CLI tool that generates and executes Python code from natural language queries"
authors = [
    {name = "Prudhvi Krovvidi", email = "prudhvi@example.com"}
]
dependencies = [
    "pydantic-ai>=0.0.14",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
]
requires-python = ">=3.12"
readme = "README.md"

[project.scripts]
smart-cli = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]